--- a/src/app/kifizetes/kifizetes-list/kifizetes-list.component.html
+++ b/src/app/kifizetes/kifizetes-list/kifizetes-list.component.html
@@ -2,22 +2,73 @@
   <h5>{{bizonylatkifizetesservice.cim}}</h5>
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="kereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
+      <button [disabled]="eppFrissit" (click)="onKereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="uj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
+      <button [disabled]="eppFrissit" (click)="doUjtetel()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+        <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
     </nav>
   </div>
   <app-tabla #tabla
-             [items]="bizonylatkifizetesservice.Dto"
+             [items]="Dto"
              [colsets]="bizonylatkifizetesservice.GridSettings"
-             (forid)="setClickedRow($event)"
+             (forid)="onId($event)"
+             [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
+  <ng-template #griduj>
+    <app-kifizetes-szerkesztes [uj] = "true"
+                               [Bizonylat]="Bizonylat"
+                               (eventSzerkeszteskesz)="onUjtetelkesz($event)">
+    </app-kifizetes-szerkesztes>
+  </ng-template>
+
   <ng-template #gridegy>
-    <app-kifizetes-egy (torlesutan)="torlesutan()"></app-kifizetes-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit"
+                  (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit"
+                  (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit"
+                  (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="bizonylatkifizetesservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="bizonylatkifizetesservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="bizonylatkifizetesservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-kifizetes-szerkesztes [uj]="false"
+                                     [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                     (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-kifizetes-szerkesztes>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
 
