--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -23,7 +23,7 @@
 
   <app-projektkapcsolat-tabla #tabla
                               [items]="Dto"
-                              (forid)="setClickedRow($event)"
+                              (forid)="onId($event)"
                               (forlevalasztas)="onLevalasztas($event)"
                               [egyBizonylat]="bizonylategy"
                               [egyIrat]="irategy"
