--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -88,7 +88,7 @@
     </div>
     <div class="col-md-2">
       <input type="date" class="form-control form-control-sm" id="bizonylatkelte"
-             [(ngModel)]="bizonylatservice.BizonylatKelte">
+             [(ngModel)]="BizonylatKelte">
     </div>
   </div>
   <div class="row no-gutters editform-row">
@@ -101,7 +101,7 @@
     </div>
     <div class="col-md-2">
       <input type="date" class="form-control form-control-sm" id="teljesiteskelte"
-             [(ngModel)]="bizonylatservice.TeljesitesKelte">
+             [(ngModel)]="TeljesitesKelte">
     </div>
   </div>
   <div class="row no-gutters editform-row">
@@ -114,7 +114,7 @@
     </div>
     <div class="col-md-2">
       <input type="date" class="form-control form-control-sm" id="fizetesihatarido"
-             [(ngModel)]="bizonylatservice.FizetesiHatarido">
+             [(ngModel)]="FizetesiHatarido">
     </div>
   </div>
 
