--- a/src/app/bizonylat/bizonylat-reszletek/bizonylat-reszletek.component.html
+++ b/src/app/bizonylat/bizonylat-reszletek/bizonylat-reszletek.component.html
@@ -1,11 +1,11 @@
 <div class="alapkeret">
   <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} részletesen</h5>
-  <div>Bizonylat</div>
-  <app-bizonylattabla [enIdclick]="false" [Dto]="dto"></app-bizonylattabla>
-  <div>Tételek</div>
-  <app-bizonylatteteltabla [enEdit]="false" [Dto]="bizonylatservice.TetelDto"></app-bizonylatteteltabla>
-  <div>ÁFA összesítés</div>
-  <app-bizonylatafatabla [enIdclick]="false" [Dto]="bizonylatservice.AfaDto"></app-bizonylatafatabla>
-  <div>Termékdíj összesítés</div>
-  <app-bizonylattermekdijtabla [enIdclick]="false" [Dto]="bizonylatservice.TermekdijDto"></app-bizonylattermekdijtabla>
+  <div class="egylabel">Bizonylat</div>
+  <app-bizonylattabla [enIdclick]="false" [Dto]="cdtoDto"></app-bizonylattabla>
+  <div class="egylabel">Tételek</div>
+  <app-bizonylatteteltabla [enEdit]="false" [Dto]="cdtoTetel"></app-bizonylatteteltabla>
+  <div class="egylabel">ÁFA összesítés</div>
+  <app-bizonylatafatabla [enIdclick]="false" [Dto]="cdtoAfa"></app-bizonylatafatabla>
+  <div class="egylabel">Termékdíj összesítés</div>
+  <app-bizonylattermekdijtabla [enIdclick]="false" [Dto]="cdtoTermekdij"></app-bizonylattermekdijtabla>
 </div>
