--- a/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
+++ b/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
@@ -4,10 +4,8 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
+      <div>
         <div class="editform-title">Nyomtatás</div>
-      </div>
-      <div class="col-md-4">
         <div *ngFor="let entry of entries;let i = index" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
                  [checked]="i === selectedi" (change)="change(i)">
@@ -18,8 +16,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" [disabled]="eppFrissit" style="margin-left:3px;" type="button" (click)="megsem()">Stop</button>
     </div>
