--- a/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
+++ b/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} kibocsátás</h5>
+  <h5>{{bizonylatLeiro.BizonylatNev}} kibocsátás</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
