--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} pénztári kezelése</h5>
+  <h5>{{bizonylatLeiro.BizonylatNev}} pénztári kezelése</h5>
 
   <ng-container *ngIf="penztarDto.length > 0 && !penztarkivalasztva">
     <div>A bizonylat pénznemének megfelelő nyitott pénztárak a következők, válassza ki a megfelelőt:</div>
