--- a/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
+++ b/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} storno</h5>
+  <h5>{{bizonylatLeiro.BizonylatNev}} storno</h5>
   <div>Biztosan stornozni akarja ezt a tételt?</div>
   <div class="row no-gutters" style="margin-bottom: 10px">
     <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" type="button" (click)="ok()">Ok</button>
