--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -35,7 +35,10 @@
   </app-projektkapcsolat-tabla>
 
   <ng-template #bizonylategy>
-    <app-bizonylat-egy (torlesutan)="torlesutan()"></app-bizonylat-egy>
+    <app-bizonylat-egy [DtoOriginal]="OriginalBizonylat"
+                       [bizonylatLeiro]="bizonylatLeiro"
+                       [enTorles]="false">
+    </app-bizonylat-egy>
   </ng-template>
 
   <ng-template #irategy>
